--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-pandas==1.5.2
-streamlit==1.22.0
-matplotlib==3.6.2
-pandas==1.5.2
-streamlit==1.22.0
-matplotlib==3.6.2
-numpy==1.23.5
+pandas==2.2.3
+streamlit==1.42.1
+matplotlib==3.10.0
+plotly-express==0.4.1
